frontend/test/should_fail/index_exec_node_isInFromIndexSame_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:set<Node>, j:int)
{
	{ i=isInNodesFromIndexSame(::n, j, j) }
}